crates/hpr-io/src/ork/snapshots/hpr_io__ork__tests__demo_multi_config.snap
---
source: crates/hpr-io/src/ork/tests.rs
expression: snapshot_of(&design)
---
{
  "configurations": [
    {
      "default": true,
      "id": "cfg-38-h128",
      "left_out": "no_curve",
      "motors": [
        {
          "curve": {
            "none": "not_found"
          },
          "delay": {
            "kind": "seconds",
            "value": 6.0
          },
          "ignition": "automatic + 0 s",
          "motor": "AeroTech H128W",
          "mount": "10f70000-0000-4000-8000-0000000000c8"
        }
      ],
      "name": "",
      "unread": 0
    },
    {
      "default": false,
      "id": "cfg-38-g40",
      "left_out": "no_curve",
      "motors": [
        {
          "curve": {
            "none": "not_found"
          },
          "delay": {
            "kind": "seconds",
            "value": 6.0
          },
          "ignition": "automatic + 0 s",
          "motor": "AeroTech G40W",
          "mount": "10f70000-0000-4000-8000-0000000000c8"
        }
      ],
      "name": "",
      "unread": 0
    }
  ],
  "flown": [],
  "kept": {
    "attributes": 2,
    "parts": [],
    "sections": 0,
    "tags": 3
  },
  "layout": {
    "cg_z_m": -0.561761331,
    "mass_kg": 0.614190647
  },
  "recovery": {
    "devices": [
      {
        "altitude_m": null,
        "cd": {
          "kind": "stated",
          "value": 0.8
        },
        "configurations": 0,
        "delay_s": 0.0,
        "deploy": "apogee",
        "id": "10f70000-0000-4000-8000-0000000000c6",
        "kind": "parachute"
      }
    ],
    "separations": []
  },
  "reduced": false,
  "rocket": "Loft Demo 38mm — motor comparison",
  "simulations": [
    {
      "branches": 0,
      "configuration": "cfg-38-h128",
      "max_altitude_m": null,
      "name": "H128W",
      "rows": 0,
      "status": "external"
    },
    {
      "branches": 0,
      "configuration": "cfg-38-g40",
      "max_altitude_m": null,
      "name": "G40W",
      "rows": 0,
      "status": "external"
    }
  ],
  "stages": [
    {
      "components": [
        {
          "id": "10f70000-0000-4000-8000-0000000000c3",
          "kind": "nose_cone",
          "motor_mount": false,
          "parts": 0
        },
        {
          "id": "10f70000-0000-4000-8000-0000000000c4",
          "kind": "body_tube",
          "motor_mount": false,
          "parts": 6
        }
      ],
      "id": "10f70000-0000-4000-8000-0000000000c2"
    }
  ],
  "warnings": []
}
