crates/hpr-io/src/ork/snapshots/hpr_io__ork__tests__demo_payload_separation.snap
---
source: crates/hpr-io/src/ork/tests.rs
expression: snapshot_of(&design)
---
{
  "configurations": [
    {
      "default": true,
      "id": "cfg-38-f50",
      "left_out": "no_curve",
      "motors": [
        {
          "curve": {
            "none": "not_found"
          },
          "delay": {
            "kind": "seconds",
            "value": 8.0
          },
          "ignition": "automatic + 0 s",
          "motor": "AeroTech F50T",
          "mount": "10f70000-0000-4000-8000-000000000409"
        }
      ],
      "name": "",
      "unread": 0
    }
  ],
  "flown": [],
  "kept": {
    "attributes": 2,
    "parts": [],
    "sections": 0,
    "tags": 3
  },
  "layout": {
    "cg_z_m": -0.510038811,
    "mass_kg": 0.591593758
  },
  "recovery": {
    "devices": [
      {
        "altitude_m": null,
        "cd": {
          "kind": "stated",
          "value": 0.9
        },
        "configurations": 0,
        "delay_s": 0.0,
        "deploy": "lowerstageseparation",
        "id": "10f70000-0000-4000-8000-000000000406",
        "kind": "parachute"
      }
    ],
    "separations": [
      {
        "configurations": 0,
        "event": "ejection",
        "stage": "10f70000-0000-4000-8000-000000000407"
      }
    ]
  },
  "reduced": false,
  "rocket": "Loft Demo 38mm — payload separation",
  "simulations": [
    {
      "branches": 0,
      "configuration": "cfg-38-f50",
      "max_altitude_m": 350.0,
      "name": "Simulation 1",
      "rows": 0,
      "status": "external"
    }
  ],
  "stages": [
    {
      "components": [
        {
          "id": "10f70000-0000-4000-8000-000000000403",
          "kind": "nose_cone",
          "motor_mount": false,
          "parts": 0
        },
        {
          "id": "10f70000-0000-4000-8000-000000000404",
          "kind": "body_tube",
          "motor_mount": false,
          "parts": 2
        }
      ],
      "id": "10f70000-0000-4000-8000-000000000402"
    },
    {
      "components": [
        {
          "id": "10f70000-0000-4000-8000-000000000408",
          "kind": "body_tube",
          "motor_mount": false,
          "parts": 4
        }
      ],
      "id": "10f70000-0000-4000-8000-000000000407"
    }
  ],
  "warnings": []
}
